...
"Onboarding_home_tab_view_description" = "Here you can see posts created by other people. You can post your own content too, including photos!";

"Onboarding_post_comments_title" = "Post's Comments";
"Onboarding_post_comments_description" = "Comment other people's activity and motivate each other.";

...
"Onboarding_workouts_tab_view_list_description" = "You can see these workouts either in the windows form or the list.";

"Onboarding_settings_view_title" = "Settings";
"Onboarding_settings_view_description" = "You want to personalize the app so that is fulfill your needs as much as it can? Here you can find all the settings. When you decide to change your login credentials, sign out or delete your account this is the place your should start from";

...
"SignInView_sign_in_form_label" = "Sign In Form";
"SignInView_email_label" = "E-Mail";
"SignInView_password_label" = "Password";

"SignInView_forgot_password_label" = "Forgot Password?";
...

// LoggedUserView Section
"LoggedUserView_home_tab_label" = "Home";
"LoggedUserView_workout_tab_label" = "Workout";
"LoggedUserView_profile_tab_label" = "Profile";


...

// HomeView
"HomeView_share" = "What do you want to share?";
"HomeView_friends_activity" = "Your friends activity";
"HomeView_post_comments_number" = "comments";
"HomeView_like_button" = "Like";
"HomeView_comment_button" = "Comment";
"HomeView_confirmation_dialog_text" = "What do you want to do with the selected post?";
"HomeView_confirmation_dialog_edit" = "Edit";
"HomeView_confirmation_dialog_delete" = "Delete";
"HomeView_confirmation_dialog_cancel" = "Cancel";

"HomeView_nothing_to_present" = "Nothing new to present.";
...

// AddPostView
"AddPostView_navigation_title" = "Add a post";
"AddPostView_post_button" = "Post";
"AddPostView_share" = "What do you want to share?";
...
// EditPostView
"EditPostView_navigation_title" = "Edit a post";
"EditPostView_save_button" = "Save";
"EditPostView_share" = "What do you want to share?";
"EditPostView_success" = "Successfully edited post.";
...

// SearchFriendsView
"SearchFriendsView_navigation_title" = "Follow";
"SearchFriendsView_follow_button" = "Follow";
"SearchFriendsView_unfollow_button" = "Unfollow";

// NotificationsView
"NotificationsView_navigation_title" = "Notifications";

// CommentsView
...
"CommentView_confirmation_dialog_cancel" = "Cancel";
"CommentView_comment_text_field_label" = "Comment";
"CommentView_send_comment_button" = "Send";
"CommentView_edit_comment_cancel_button" = "Cancel";
"CommentView_send_comment_update_button" = "Update";
...

// WorkoutView
"WorkoutView_navigation_title" = "Workouts";
"WorkoutView_sample_workouts" = "Sample Workouts";
"WorkoutView_interval_training_type" = "Interval";
"WorkoutView_interval_work_time" = "Work Time";
"WorkoutView_interval_rest_time" = "Rest Time";
"WorkoutView_interval_series" = "Series";
"WorkoutView_users_workouts" = "User's Workouts";

// WorkoutAddView
"WorkoutAddView_navigation_title" = "Add Workout";
"WorkoutAddView_interval_rounds_number" = "Rounds Number";
"WorkoutAddView_interval_rounds_unit" = "number";
"WorkoutAddView_interval_work_time" = "Work Time";
...
//FinishedWorkoutView
"FinishedWorkoutView_save_button" = "Save";
"FinishedWorkoutView_discard_button" = "Discard";
"FinisehdWorkoutView_saving_error" = "Cannot save the workout right now. Please try again later.";

...
"SettingsView_account_settings_section" = "Account";

"SettingsView_change_email_address_button" = "Change e-mail address";
"ChangeEmailSheet_old_email_address" = "Old e-mail address";
"ChangeEmailSheet_password" = "Password";
"ChangeEmailSheet_new_email_address" = "New e-mail address";
"ChangeEmailSheet_info" = "Before you change your e-mail address please provide your login credentials to confirm it is really you";
"ChangeEmailSheet_change_email_address_button" = "Change e-mail address";
...
"ChangeEmailSheet_change_email_success" = "Successfully changed e-mail address.";

"SettingsView_change_password_button" = "Change password";
"ChangePasswordSheet_email_address" = "E-mail address";
"ChangePasswordSheet_old_password" = "Old password";
"ChangePasswordSheet_new_password" = "New password";
"ChangePasswordSheet_info" = "Before you change your password please provide your login credentials to confirm it is really you";
"ChangePasswordSheet_change_password_button" = "Change password";
...
"ChangePasswordSheet_change_password_success" = "Successfully changed password.";

"SettingsView_logout" = "Logout";
"SettingsView_logout_confirmation_dialog_text" = "Are you sure you want to logout?";
"SettingsView_logout_confirmation_dialog_logout_button" = "Logout";
"SettingsView_logout_confirmation_dialog_cancel_button" = "Cancel";

"SettingsView_delete_account" = "Delete account";
"SettingsView_delete_account_confirmation_dialog_text" = "Are you sure you want to delete your account? All data will be lost.";
"SettingsView_delete_account_confirmation_dialog_delete_account_button" = "Delete Account";
"SettingsView_delete_account_confirmation_dialog_cancel_button" = "Cancel";
"DeleteAccountSheet_email_address" = "E-mail address";
...
"DeleteAccountSheet_delete_account_error" = "Error deleting the user's account. Please, try again later.";

"SettingsView_help_settings_section" = "Help";
"SettingsView_version_label" = "Version (build)";
"SettingsView_terms_and_conditions_settings_label" = "Terms and Conditions";
"SettingsView_terms_and_conditions_navigation_title" = "Terms and Conditions";
"SettingsView_terms_and_conditions_text" = "This app is a fully open-source and licence-free product";
...
// HealthTabView
"HealthTabView_navigation_title" = "Health Data";
"HealthTabView_steps" = "Steps";
"HealthTabView_calories" = "Calories";
"HealthTabView_calories_unit" = "kcal";
...
