...
                    
                    NavigationLink("Help", destination: {
                        VStack(alignment: .leading) {
                            Text("In case of any problem please write an e-mail to:")
                            Text("ljaniszewski00@gmail.com")
                                .foregroundColor(.green)
                            Text("describing the matter.")
                            Spacer()
                        }
                        .padding()
                        .navigationTitle("Help")
                    })
                    
                    HStack {
                        HStack {
                            Image(systemName: "link.circle.fill")
                                .font(.title)
                                .foregroundColor(.green)
                            Text("Follow me on GitHub:")
                            Link("Vader20FF", destination: URL(string: "https://github.com/Vader20FF")!)
                                .foregroundColor(.green)
                                .font(.system(size: 18, weight: .bold))
                        }
                    }
                }
...
            let screenHeight = geometry.size.height
        
            NavigationView {
                VStack {
                    Form {
                        Section(footer: Text("Before you delete your account please provide your login credentials to confirm it is really you.")) {
                            TextField("E-mail", text: $email)
                            SecureField("Password", text: $password)
                        }
                    }
                    
                    Button(action: {
                        withAnimation {
...
