...
    
    var body: some View {
        GeometryReader { geometry in
            let screenWidth = geometry.size.width
            let screenHeight = geometry.size.height
            
            List(profileViewModel.workouts!) { workout in
                NavigationLink(destination: SingleWorkoutWindowView(workout: workout)
                                .navigationTitle(String(localized: "WorkoutTabView_list_single_workout_navigation_title"))
                                .navigationBarHidden(false)
                                .frame(width: screenWidth, height: screenHeight))
                {
                    HStack {
...
